miniC.output
Estado 79 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: inicializar "void" "id" "(" ")" "{" declarations statement_list "}"

    2 inicializar: %empty

    3 $@1: %empty

    4 declarations: declarations "var" $@1 identifier_list ";"

    5 $@2: %empty

    6 declarations: declarations "const" $@2 identifier_list ";"
    7             | %empty

    8 identifier_list: asig
    9                | identifier_list "," asig

   10 asig: "id"
   11     | "id" "=" expression

   12 statement_list: statement_list statement
   13               | %empty

   14 statement: "id" "=" expression ";"
   15          | "{" statement_list "}"
   16          | "if" "(" expression ")" statement "else" statement
   17          | "if" "(" expression ")" statement
   18          | "while" "(" expression ")" statement
   19          | "print" print_list ";"
   20          | "read" read_list ";"
   21          | "do" statement "while" "(" expression ")" ";"
   22          | "for" "(" "num" ")" statement

   23 print_list: print_item
   24           | print_list "," print_item

   25 print_item: expression
   26           | "string"

   27 read_list: "id"
   28          | read_list "," "id"

   29 expression: expression "+" expression
   30           | expression "-" expression
   31           | expression "*" expression
   32           | expression "/" expression
   33           | "-" expression
   34           | "(" expression ")"
   35           | "id"
   36           | "num"


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    "id" <cadena> (258) 1 10 11 14 27 28 35
    "+" (259) 29
    "-" (260) 30 33
    "*" (261) 31
    "/" (262) 32
    ";" (263) 4 6 14 19 20 21
    "(" (264) 1 16 17 18 21 22 34
    ")" (265) 1 16 17 18 21 22 34
    "=" (266) 11 14
    "num" <cadena> (267) 22 36
    "print" (268) 19
    "string" <cadena> (269) 26
    "," (270) 9 24 28
    "{" (271) 1 15
    "}" (272) 1 15
    "void" (273) 1
    "var" (274) 4
    "const" (275) 6
    "if" (276) 16 17
    "else" (277) 16
    "while" (278) 18 21
    "read" (279) 20
    "do" (280) 21
    "for" (281) 22
    UMINUS (282)


No terminales con las reglas donde aparecen

    $accept (28)
        on left: 0
    program <codigo> (29)
        on left: 1
        on right: 0
    inicializar <codigo> (30)
        on left: 2
        on right: 1
    declarations <codigo> (31)
        on left: 4 6 7
        on right: 1 4 6
    $@1 (32)
        on left: 3
        on right: 4
    $@2 (33)
        on left: 5
        on right: 6
    identifier_list <codigo> (34)
        on left: 8 9
        on right: 4 6 9
    asig <codigo> (35)
        on left: 10 11
        on right: 8 9
    statement_list <codigo> (36)
        on left: 12 13
        on right: 1 12 15
    statement <codigo> (37)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 12 16 17 18 21 22
    print_list <codigo> (38)
        on left: 23 24
        on right: 19 24
    print_item <codigo> (39)
        on left: 25 26
        on right: 23 24
    read_list <codigo> (40)
        on left: 27 28
        on right: 20 28
    expression <codigo> (41)
        on left: 29 30 31 32 33 34 35 36
        on right: 11 14 16 17 18 21 25 29 30 31 32 33 34


Estado 0

    0 $accept: . program $end

    $default  reduce usando la regla 2 (inicializar)

    program      ir al estado 1
    inicializar  ir al estado 2


Estado 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 program: inicializar . "void" "id" "(" ")" "{" declarations statement_list "}"

    "void"  desplazar e ir al estado 4


Estado 3

    0 $accept: program $end .

    $default  aceptar


Estado 4

    1 program: inicializar "void" . "id" "(" ")" "{" declarations statement_list "}"

    "id"  desplazar e ir al estado 5


Estado 5

    1 program: inicializar "void" "id" . "(" ")" "{" declarations statement_list "}"

    "("  desplazar e ir al estado 6


Estado 6

    1 program: inicializar "void" "id" "(" . ")" "{" declarations statement_list "}"

    ")"  desplazar e ir al estado 7


Estado 7

    1 program: inicializar "void" "id" "(" ")" . "{" declarations statement_list "}"

    "{"  desplazar e ir al estado 8


Estado 8

    1 program: inicializar "void" "id" "(" ")" "{" . declarations statement_list "}"

    $default  reduce usando la regla 7 (declarations)

    declarations  ir al estado 9


Estado 9

    1 program: inicializar "void" "id" "(" ")" "{" declarations . statement_list "}"
    4 declarations: declarations . "var" $@1 identifier_list ";"
    6             | declarations . "const" $@2 identifier_list ";"

    "var"    desplazar e ir al estado 10
    "const"  desplazar e ir al estado 11

    $default  reduce usando la regla 13 (statement_list)

    statement_list  ir al estado 12


Estado 10

    4 declarations: declarations "var" . $@1 identifier_list ";"

    $default  reduce usando la regla 3 ($@1)

    $@1  ir al estado 13


Estado 11

    6 declarations: declarations "const" . $@2 identifier_list ";"

    $default  reduce usando la regla 5 ($@2)

    $@2  ir al estado 14


Estado 12

    1 program: inicializar "void" "id" "(" ")" "{" declarations statement_list . "}"
   12 statement_list: statement_list . statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "}"      desplazar e ir al estado 18
    "if"     desplazar e ir al estado 19
    "while"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 24


Estado 13

    4 declarations: declarations "var" $@1 . identifier_list ";"

    "id"  desplazar e ir al estado 25

    identifier_list  ir al estado 26
    asig             ir al estado 27


Estado 14

    6 declarations: declarations "const" $@2 . identifier_list ";"

    "id"  desplazar e ir al estado 25

    identifier_list  ir al estado 28
    asig             ir al estado 27


Estado 15

   14 statement: "id" . "=" expression ";"

    "="  desplazar e ir al estado 29


Estado 16

   19 statement: "print" . print_list ";"

    "id"      desplazar e ir al estado 30
    "-"       desplazar e ir al estado 31
    "("       desplazar e ir al estado 32
    "num"     desplazar e ir al estado 33
    "string"  desplazar e ir al estado 34

    print_list  ir al estado 35
    print_item  ir al estado 36
    expression  ir al estado 37


Estado 17

   15 statement: "{" . statement_list "}"

    $default  reduce usando la regla 13 (statement_list)

    statement_list  ir al estado 38


Estado 18

    1 program: inicializar "void" "id" "(" ")" "{" declarations statement_list "}" .

    $default  reduce usando la regla 1 (program)


Estado 19

   16 statement: "if" . "(" expression ")" statement "else" statement
   17          | "if" . "(" expression ")" statement

    "("  desplazar e ir al estado 39


Estado 20

   18 statement: "while" . "(" expression ")" statement

    "("  desplazar e ir al estado 40


Estado 21

   20 statement: "read" . read_list ";"

    "id"  desplazar e ir al estado 41

    read_list  ir al estado 42


Estado 22

   21 statement: "do" . statement "while" "(" expression ")" ";"

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "if"     desplazar e ir al estado 19
    "while"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 43


Estado 23

   22 statement: "for" . "(" "num" ")" statement

    "("  desplazar e ir al estado 44


Estado 24

   12 statement_list: statement_list statement .

    $default  reduce usando la regla 12 (statement_list)


Estado 25

   10 asig: "id" .
   11     | "id" . "=" expression

    "="  desplazar e ir al estado 45

    $default  reduce usando la regla 10 (asig)


Estado 26

    4 declarations: declarations "var" $@1 identifier_list . ";"
    9 identifier_list: identifier_list . "," asig

    ";"  desplazar e ir al estado 46
    ","  desplazar e ir al estado 47


Estado 27

    8 identifier_list: asig .

    $default  reduce usando la regla 8 (identifier_list)


Estado 28

    6 declarations: declarations "const" $@2 identifier_list . ";"
    9 identifier_list: identifier_list . "," asig

    ";"  desplazar e ir al estado 48
    ","  desplazar e ir al estado 47


Estado 29

   14 statement: "id" "=" . expression ";"

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 49


Estado 30

   35 expression: "id" .

    $default  reduce usando la regla 35 (expression)


Estado 31

   33 expression: "-" . expression

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 50


Estado 32

   34 expression: "(" . expression ")"

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 51


Estado 33

   36 expression: "num" .

    $default  reduce usando la regla 36 (expression)


Estado 34

   26 print_item: "string" .

    $default  reduce usando la regla 26 (print_item)


Estado 35

   19 statement: "print" print_list . ";"
   24 print_list: print_list . "," print_item

    ";"  desplazar e ir al estado 52
    ","  desplazar e ir al estado 53


Estado 36

   23 print_list: print_item .

    $default  reduce usando la regla 23 (print_list)


Estado 37

   25 print_item: expression .
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 54
    "-"  desplazar e ir al estado 55
    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57

    $default  reduce usando la regla 25 (print_item)


Estado 38

   12 statement_list: statement_list . statement
   15 statement: "{" statement_list . "}"

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "}"      desplazar e ir al estado 58
    "if"     desplazar e ir al estado 19
    "while"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 24


Estado 39

   16 statement: "if" "(" . expression ")" statement "else" statement
   17          | "if" "(" . expression ")" statement

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 59


Estado 40

   18 statement: "while" "(" . expression ")" statement

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 60


Estado 41

   27 read_list: "id" .

    $default  reduce usando la regla 27 (read_list)


Estado 42

   20 statement: "read" read_list . ";"
   28 read_list: read_list . "," "id"

    ";"  desplazar e ir al estado 61
    ","  desplazar e ir al estado 62


Estado 43

   21 statement: "do" statement . "while" "(" expression ")" ";"

    "while"  desplazar e ir al estado 63


Estado 44

   22 statement: "for" "(" . "num" ")" statement

    "num"  desplazar e ir al estado 64


Estado 45

   11 asig: "id" "=" . expression

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 65


Estado 46

    4 declarations: declarations "var" $@1 identifier_list ";" .

    $default  reduce usando la regla 4 (declarations)


Estado 47

    9 identifier_list: identifier_list "," . asig

    "id"  desplazar e ir al estado 25

    asig  ir al estado 66


Estado 48

    6 declarations: declarations "const" $@2 identifier_list ";" .

    $default  reduce usando la regla 6 (declarations)


Estado 49

   14 statement: "id" "=" expression . ";"
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 54
    "-"  desplazar e ir al estado 55
    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57
    ";"  desplazar e ir al estado 67


Estado 50

   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression
   33           | "-" expression .

    $default  reduce usando la regla 33 (expression)


Estado 51

   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression
   34           | "(" expression . ")"

    "+"  desplazar e ir al estado 54
    "-"  desplazar e ir al estado 55
    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57
    ")"  desplazar e ir al estado 68


Estado 52

   19 statement: "print" print_list ";" .

    $default  reduce usando la regla 19 (statement)


Estado 53

   24 print_list: print_list "," . print_item

    "id"      desplazar e ir al estado 30
    "-"       desplazar e ir al estado 31
    "("       desplazar e ir al estado 32
    "num"     desplazar e ir al estado 33
    "string"  desplazar e ir al estado 34

    print_item  ir al estado 69
    expression  ir al estado 37


Estado 54

   29 expression: expression "+" . expression

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 70


Estado 55

   30 expression: expression "-" . expression

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 71


Estado 56

   31 expression: expression "*" . expression

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 72


Estado 57

   32 expression: expression "/" . expression

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 73


Estado 58

   15 statement: "{" statement_list "}" .

    $default  reduce usando la regla 15 (statement)


Estado 59

   16 statement: "if" "(" expression . ")" statement "else" statement
   17          | "if" "(" expression . ")" statement
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 54
    "-"  desplazar e ir al estado 55
    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57
    ")"  desplazar e ir al estado 74


Estado 60

   18 statement: "while" "(" expression . ")" statement
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 54
    "-"  desplazar e ir al estado 55
    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57
    ")"  desplazar e ir al estado 75


Estado 61

   20 statement: "read" read_list ";" .

    $default  reduce usando la regla 20 (statement)


Estado 62

   28 read_list: read_list "," . "id"

    "id"  desplazar e ir al estado 76


Estado 63

   21 statement: "do" statement "while" . "(" expression ")" ";"

    "("  desplazar e ir al estado 77


Estado 64

   22 statement: "for" "(" "num" . ")" statement

    ")"  desplazar e ir al estado 78


Estado 65

   11 asig: "id" "=" expression .
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 54
    "-"  desplazar e ir al estado 55
    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57

    $default  reduce usando la regla 11 (asig)


Estado 66

    9 identifier_list: identifier_list "," asig .

    $default  reduce usando la regla 9 (identifier_list)


Estado 67

   14 statement: "id" "=" expression ";" .

    $default  reduce usando la regla 14 (statement)


Estado 68

   34 expression: "(" expression ")" .

    $default  reduce usando la regla 34 (expression)


Estado 69

   24 print_list: print_list "," print_item .

    $default  reduce usando la regla 24 (print_list)


Estado 70

   29 expression: expression . "+" expression
   29           | expression "+" expression .
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57

    $default  reduce usando la regla 29 (expression)


Estado 71

   29 expression: expression . "+" expression
   30           | expression . "-" expression
   30           | expression "-" expression .
   31           | expression . "*" expression
   32           | expression . "/" expression

    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57

    $default  reduce usando la regla 30 (expression)


Estado 72

   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   31           | expression "*" expression .
   32           | expression . "/" expression

    $default  reduce usando la regla 31 (expression)


Estado 73

   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression
   32           | expression "/" expression .

    $default  reduce usando la regla 32 (expression)


Estado 74

   16 statement: "if" "(" expression ")" . statement "else" statement
   17          | "if" "(" expression ")" . statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "if"     desplazar e ir al estado 19
    "while"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 79


Estado 75

   18 statement: "while" "(" expression ")" . statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "if"     desplazar e ir al estado 19
    "while"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 80


Estado 76

   28 read_list: read_list "," "id" .

    $default  reduce usando la regla 28 (read_list)


Estado 77

   21 statement: "do" statement "while" "(" . expression ")" ";"

    "id"   desplazar e ir al estado 30
    "-"    desplazar e ir al estado 31
    "("    desplazar e ir al estado 32
    "num"  desplazar e ir al estado 33

    expression  ir al estado 81


Estado 78

   22 statement: "for" "(" "num" ")" . statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "if"     desplazar e ir al estado 19
    "while"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 82


Estado 79

   16 statement: "if" "(" expression ")" statement . "else" statement
   17          | "if" "(" expression ")" statement .

    "else"  desplazar e ir al estado 83

    "else"    [reduce usando la regla 17 (statement)]
    $default  reduce usando la regla 17 (statement)


Estado 80

   18 statement: "while" "(" expression ")" statement .

    $default  reduce usando la regla 18 (statement)


Estado 81

   21 statement: "do" statement "while" "(" expression . ")" ";"
   29 expression: expression . "+" expression
   30           | expression . "-" expression
   31           | expression . "*" expression
   32           | expression . "/" expression

    "+"  desplazar e ir al estado 54
    "-"  desplazar e ir al estado 55
    "*"  desplazar e ir al estado 56
    "/"  desplazar e ir al estado 57
    ")"  desplazar e ir al estado 84


Estado 82

   22 statement: "for" "(" "num" ")" statement .

    $default  reduce usando la regla 22 (statement)


Estado 83

   16 statement: "if" "(" expression ")" statement "else" . statement

    "id"     desplazar e ir al estado 15
    "print"  desplazar e ir al estado 16
    "{"      desplazar e ir al estado 17
    "if"     desplazar e ir al estado 19
    "while"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "do"     desplazar e ir al estado 22
    "for"    desplazar e ir al estado 23

    statement  ir al estado 85


Estado 84

   21 statement: "do" statement "while" "(" expression ")" . ";"

    ";"  desplazar e ir al estado 86


Estado 85

   16 statement: "if" "(" expression ")" statement "else" statement .

    $default  reduce usando la regla 16 (statement)


Estado 86

   21 statement: "do" statement "while" "(" expression ")" ";" .

    $default  reduce usando la regla 21 (statement)
